--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-OPENAI_API_KEY=
+OPENAI_API_KEY='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'
 
 # Update these with your Supabase details from your project settings > API and dashboard settings
-PINECONE_API_KEY=
-PINECONE_ENVIRONMENT=
-PINECONE_INDEX_NAME=
+PINECONE_API_KEY='2f08280d-ef1f-4ff4-bd31-0a36f92e0496'
+PINECONE_ENVIRONMENT='northamerica-northeast1-gcp'
+PINECONE_INDEX_NAME='wjcopenai2'
